deploy/k8s/aws/base_api-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespace}
  labels:
    app.kubernetes.io/component: ${component}
    app.kubernetes.io/name: ${resource_def_name}
    app.kubernetes.io/part-of: ${project}

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:316154162729:certificate/17e50dfb-9fdc-4dce-92c1-8351a3961279 # This needs to be amended specifically
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    external-dns.alpha.kubernetes.io/hostname: ${dns_pointer}
    app.kubernetes.io/instance: ${project}-${app_name}
    app.kubernetes.io/version: ${version}
    applicationId: ${project}/${app_name}
    applicationName: ${project}-${app_name}
    customerID: ${company}
    kubernetes.io/ingress.class: alb
    owner: ${company}/${project}
    projectID: ${project}
    version: ${version}
  labels:
    app.kubernetes.io/component: ${component}
    app.kubernetes.io/name: ${resource_def_name}
    app.kubernetes.io/part-of: ${project}
    environment: ${environment}
  finalizers:
  - ingress.k8s.aws/resources
  name: ${resource_def_name}
  namespace: ${namespace}
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ${resource_def_name}
              servicePort: 80
            path: ${k8s_app_route}/*
            pathType: ImplementationSpecific
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: ${k8s_app_route}/swagger/index.html
    app.kubernetes.io/instance: ${project}-${app_name}
    app.kubernetes.io/version: ${version}
    applicationId: ${project}/${app_name}
    applicationName: ${project}-${app_name}
    customerID: ${company}
    owner: ${company}/${project}
    projectID: ${project}
    version: ${version}
  labels:
    app.kubernetes.io/component: ${component}
    app.kubernetes.io/name: ${resource_def_name}
    app.kubernetes.io/part-of: ${project}
    environment: ${environment}
  name: ${resource_def_name}
  namespace: ${namespace}
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: ${component}
    app.kubernetes.io/name: ${resource_def_name}
    app.kubernetes.io/part-of: ${project}
    environment: ${environment}
  sessionAffinity: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.kubernetes.io/instance: ${project}-${app_name}
    app.kubernetes.io/version: ${version}
    applicationId: ${project}/${app_name}
    applicationName: ${project}-${app_name}
    customerID: ${company}
    owner: ${company}/${project}
    projectID: ${project}
    version: ${version}
  labels:
    app.kubernetes.io/component: ${component}
    app.kubernetes.io/name: ${resource_def_name}
    app.kubernetes.io/part-of: ${project}
    environment: ${environment}
  name: ${resource_def_name}
  namespace: ${namespace}
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ${component}
      app.kubernetes.io/name: ${resource_def_name}
      app.kubernetes.io/part-of: ${project}
      environment: ${environment}
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        app.kubernetes.io/version: ${version}
        applicationId: ${project}/${app_name}
        applicationName: ${project}-${app_name}
        customerID: ${company}
        owner: ${company}/${project}
        projectID: ${project}
        role: api
        version: ${version}
      labels:
        app.kubernetes.io/component: ${component}
        app.kubernetes.io/name: ${resource_def_name}
        app.kubernetes.io/part-of: ${project}
        environment: ${environment}
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: api
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
          image: ${k8s_image} # this we need to pass from the pipeline to the deployment steps
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: appsettings
              mountPath: /app/config  # this can either be configured if you are re-using this for many services or should be changed here
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 25
      volumes:
        - name: appsettings
          configMap:
            name: appsettings
